--- a/Навыки.md
+++ b/Навыки.md
@@ -1,10 +1,10 @@
 _В то время, как характеристики вашего персонажа олицетворяют их чистые возможности и потенциал, навыки представляют их подготовку и опыт выполнения определенных задач. Каждый навык привязан к одной из характеристик и используется для множества связанных задач. Опытность вашего персонажа в навыке складывается из нескольких источников, включая их предысторию и класс. В этой главе вы узнаете о навыках, их области применения и действиях, для которых они могут быть использованы.
 
-Улучшение навыков (Improving Skills)
+##### Улучшение навыков (Improving Skills)
 
 По мере увеличения уровней персонажа, есть два основных пути улучшения навыков: увеличение навыка и способности навыков. В информации о классе указано на каких уровнях вы получаете эти улучшения.
 
-Увеличения навыков (Skill Increases)
+##### Увеличения навыков (Skill Increases)
 
 Увеличения навыков улучшают уровень мастерства выбранных вами навыков. Вы можете использовать эти увеличения, чтобы стать обученным новым навыкам, или увеличивать свой уровень мастерства навыка, которому вы уже обучены (с обученного до эксперта на любом уровне, с эксперта до мастера начиная с 7-го уровня, и с мастера до легенды начиная с 15-го уровня или выше). В отличие от того, как вы в самом начале становились обученным навыку, если два разных умения сделают вас экспертом, мастером или легендой навыка, то вы не получаете возможность выбрать другой навык, чтобы стать в нем экспертом/мастером/легендой - излишнее преимущество просто не имеет эффекта.
 
