--- a/Навыки.md
+++ b/Навыки.md
@@ -8,7 +8,7 @@ _В то время, как характеристики вашего персо
 
 Увеличения навыков улучшают уровень мастерства выбранных вами навыков. Вы можете использовать эти увеличения, чтобы стать обученным новым навыкам, или увеличивать свой уровень мастерства навыка, которому вы уже обучены (с обученного до эксперта на любом уровне, с эксперта до мастера начиная с 7-го уровня, и с мастера до легенды начиная с 15-го уровня или выше). В отличие от того, как вы в самом начале становились обученным навыку, если два разных умения сделают вас экспертом, мастером или легендой навыка, то вы не получаете возможность выбрать другой навык, чтобы стать в нем экспертом/мастером/легендой - излишнее преимущество просто не имеет эффекта.
 
-Способности навыков (Skill Feats)
+##### Способности навыков (Skill Feats)
 
 Способности навыков - разновидности общих способностей, которые дают вам новый способ пользоваться навыком или позволяет вам лучше использовать навык определенным образом. Способности навыков всегда имеют признак навык. Эти способности описаны в Главе 5. Способности (Feats).
 
