--- a/Навыки.md
+++ b/Навыки.md
@@ -18,7 +18,8 @@ _В то время, как характеристики вашего персо
 
 Добавлено в версии /errata-r2: Добавление про то, что Знания меняются на другие Знания.
 
-Ключевая характеристика (Key Ability)
+##### Ключевая характеристика (Key Ability)
+
 Каждый навык связан с ключевой характеристикой. Вы добавляете ваш модификатор этой характеристики к проверкам и КС при использовании этого навыка. Например, чтобы притаиться ночью в тенях города с помощью Скрытности, использует модификатор Ловкости, ориентирование в несметном числе личностей и придворных политических играх при помощи Общества, использует модификатор Интеллекта, и так далее. Ключевые характеристики каждого навыка перечислены в Таблица 4-1: Навыки, ключевые хар-ки и действия, а еще указаны в скобках после названия навыка в описаниях следующих разделов. Однако, в определенной ситуации, Мастер может разрешить вам использовать модификатор другой характеристики для проверки навыка или определении КС вашего навыка, если он считает это подходящим.
 
 Действия навыков (Skill Actions)
