--- a/4. Навыки/Навыки.md
+++ b/4. Навыки/Навыки.md
@@ -1,15 +1,12 @@
 _В то время, как характеристики вашего персонажа олицетворяют их чистые возможности и потенциал, навыки представляют их подготовку и опыт выполнения определенных задач. Каждый навык привязан к одной из характеристик и используется для множества связанных задач. Опытность вашего персонажа в навыке складывается из нескольких источников, включая их предысторию и класс. В этой главе вы узнаете о навыках, их области применения и действиях, для которых они могут быть использованы.
 
 ##### Улучшение навыков (Improving Skills)
-
 По мере увеличения уровней персонажа, есть два основных пути улучшения навыков: увеличение навыка и способности навыков. В информации о классе указано на каких уровнях вы получаете эти улучшения.
 
 ##### Увеличения навыков (Skill Increases)
-
 Увеличения навыков улучшают уровень мастерства выбранных вами навыков. Вы можете использовать эти увеличения, чтобы стать обученным новым навыкам, или увеличивать свой уровень мастерства навыка, которому вы уже обучены (с обученного до эксперта на любом уровне, с эксперта до мастера начиная с 7-го уровня, и с мастера до легенды начиная с 15-го уровня или выше). В отличие от того, как вы в самом начале становились обученным навыку, если два разных умения сделают вас экспертом, мастером или легендой навыка, то вы не получаете возможность выбрать другой навык, чтобы стать в нем экспертом/мастером/легендой - излишнее преимущество просто не имеет эффекта.
 
 ##### Способности навыков (Skill Feats)
-
 Способности навыков - разновидности общих способностей, которые дают вам новый способ пользоваться навыком или позволяет вам лучше использовать навык определенным образом. Способности навыков всегда имеют признак навык. Эти способности описаны в Главе 5. Способности (Feats).
 
 Проницательность персонажа в навыках может складываться из всех видов обучения, от практики акробатических трюков до изучения академических тем и репетиций исполнительского искусства. Когда вы создаете своего персонажа и по мере того, как он продвигается в уровнях, у вас есть гибкость в отношении того, в каких навыках и когда он становится лучше. Некоторые классы сильно зависят от определенных навыков, как например алхимик зависит от Ремесла, но для большинства классов, вы можете выбирать какие угодно навыки имеющие смысл для задумки и предыстории персонажа 1-го уровня, потом используйте их опыт приключения и отдыха, чтобы решить, как его навыки должны развиваться, по мере роста в уровнях.
@@ -19,10 +16,9 @@ _В то время, как характеристики вашего персо
 Добавлено в версии /errata-r2: Добавление про то, что Знания меняются на другие Знания.
 
 ##### Ключевая характеристика (Key Ability)
+Каждый навык связан с ключевой характеристикой. Вы добавляете ваш модификатор этой характеристики к проверкам и КС при использовании этого навыка. Например, чтобы притаиться ночью в тенях города с помощью Скрытности, использует модификатор Ловкости, ориентирование в несметном числе личностей и придворных политических играх при помощи Общества, использует модификатор Интеллекта, и так далее. Ключевые характеристики каждого навыка перечислены в таблице, а еще указаны в скобках после названия навыка в описаниях следующих разделов. Однако, в определенной ситуации, Мастер может разрешить вам использовать модификатор другой характеристики для проверки навыка или определении КС вашего навыка, если он считает это подходящим.
 
-Каждый навык связан с ключевой характеристикой. Вы добавляете ваш модификатор этой характеристики к проверкам и КС при использовании этого навыка. Например, чтобы притаиться ночью в тенях города с помощью Скрытности, использует модификатор Ловкости, ориентирование в несметном числе личностей и придворных политических играх при помощи Общества, использует модификатор Интеллекта, и так далее. Ключевые характеристики каждого навыка перечислены в Таблица 4-1: Навыки, ключевые хар-ки и действия, а еще указаны в скобках после названия навыка в описаниях следующих разделов. Однако, в определенной ситуации, Мастер может разрешить вам использовать модификатор другой характеристики для проверки навыка или определении КС вашего навыка, если он считает это подходящим.
-
-Действия навыков (Skill Actions)
-Действия, которые вы можете совершать с помощью определенного навыка, подразделяются на те, которые вы можете использовать без обучения, и те, которые требуют быть обученным навыку, как показано в Таблица 4-1: Навыки, ключевые хар-ки и действия. Эти действия, требующие и не требующие обучения, описаны для каждого навыка в отдельном разделе описания навыка.
+##### Действия навыков (Skill Actions)
+Действия, которые вы можете совершать с помощью определенного навыка, подразделяются на те, которые вы можете использовать без обучения, и те, которые требуют быть обученным навыку, как показано в таблице. Эти действия, требующие и не требующие обучения, описаны для каждого навыка в отдельном разделе описания навыка.
 
 Кто угодно может использовать действия навыков не требующие обучения, но вы можете использовать действия требующие обучения, только если ваш уровень мастерства навыка - "обучен" или лучше. Обстоятельство, состояние или эффект, могут мешать вам использовать действие навыка независимо от вашего мастерства, а иногда использование навыка в определенных ситуациях может требовать от вас иметь более высокий уровень мастерства, чем указано в таблице. Например, хоть необученный Аркане варвар и может при удачном броске проверки Арканы для Вспомнить информацию (Recall Knowledge) идентифицировать конструкта, Мастер может решить, что "Вспомнить информацию" для определения заклинаний использованных в создании такого конструкта - за пределами смехотворных познаний варвара. Мастер решает, требуется ли для задачи определенный уровень мастерства навыка.
