--- a/3. Классы/Архетипы/Линчеватель.md
+++ b/3. Классы/Архетипы/Линчеватель.md
@@ -4,6 +4,9 @@
 4-й уровень: Быстрый выхват (Quick Draw (Ranger)) / 2
 
 ##### Посвящение линчевателя (Vigilante Dedication) / 2
+
+^abaadf
+
 #необычный #архетип #посвящение
 Предварительные условия: обучен Обману
 
