--- a/4. Навыки/Навыки.md
+++ b/4. Навыки/Навыки.md
@@ -1,4 +1,4 @@
-_В то время, как характеристики вашего персонажа олицетворяют их чистые возможности и потенциал, навыки представляют их подготовку и опыт выполнения определенных задач. Каждый навык привязан к одной из характеристик и используется для множества связанных задач. Опытность вашего персонажа в навыке складывается из нескольких источников, включая их предысторию и класс. В этой главе вы узнаете о навыках, их области применения и действиях, для которых они могут быть использованы.
+*В то время, как характеристики вашего персонажа олицетворяют их чистые возможности и потенциал, навыки представляют их подготовку и опыт выполнения определенных задач. Каждый навык привязан к одной из характеристик и используется для множества связанных задач. Опытность вашего персонажа в навыке складывается из нескольких источников, включая их предысторию и класс. В этой главе вы узнаете о навыках, их области применения и действиях, для которых они могут быть использованы.*
 
 ##### Улучшение навыков (Improving Skills)
 По мере увеличения уровней персонажа, есть два основных пути улучшения навыков: увеличение навыка и способности навыков. В информации о классе указано на каких уровнях вы получаете эти улучшения.
