--- a/4. Навыки/Навыки.md
+++ b/4. Навыки/Навыки.md
@@ -22,3 +22,43 @@
 Действия, которые вы можете совершать с помощью определенного навыка, подразделяются на те, которые вы можете использовать без обучения, и те, которые требуют быть обученным навыку, как показано в таблице. Эти действия, требующие и не требующие обучения, описаны для каждого навыка в отдельном разделе описания навыка.
 
 Кто угодно может использовать действия навыков не требующие обучения, но вы можете использовать действия требующие обучения, только если ваш уровень мастерства навыка - "обучен" или лучше. Обстоятельство, состояние или эффект, могут мешать вам использовать действие навыка независимо от вашего мастерства, а иногда использование навыка в определенных ситуациях может требовать от вас иметь более высокий уровень мастерства, чем указано в таблице. Например, хоть необученный Аркане варвар и может при удачном броске проверки Арканы для Вспомнить информацию (Recall Knowledge) идентифицировать конструкта, Мастер может решить, что "Вспомнить информацию" для определения заклинаний использованных в создании такого конструкта - за пределами смехотворных познаний варвара. Мастер решает, требуется ли для задачи определенный уровень мастерства навыка.
+
+- **Акробатика (Acrobatics)**
+	Ловкость
+	- Действия без обучения
+		Балансировать (Balance) #одиночное_действие
+		Проскочить (Tumble Through) #одиночное_действие
+	- Действия с обучением
+		Маневрирование в полете (Maneuver in Flight) #одиночное_действие
+		Протиснуться (Squeeze)<sup> И</sup>
+- **Аркана (Arcana)**
+	Интеллект
+	- Действия без обучения
+		Вспомнить информацию (Recall Knowledge) <sup>Общ</sup> #одиночное_действие
+	- Действия с обучением
+		Одолжить арканное заклинание (Borrow an Arcane Spell) <sup>И</sup>
+		Расшифровка текста (Decipher Writing) <sup>И, Общ</sup>
+		Идентификация магии (Identify Magic) <sup>И, Общ</sup>
+		Выучить заклинание (Learn a Spell) <sup>И, Общ</sup>
+- **Атлетика (Athletics)**
+	Сила
+	- Действия без обучения
+		Захватить (Grapple) #одиночное_действие
+		Толкнуть (Shove) #одиночное_действие
+		Опрокинуть (Trip) #одиночное_действие
+		Прыжок в высоту (High Jump) #активность_из_2-х_действий
+		Прыжок в длину (Long Jump) #активность_из_2-х_действий
+		Карабкаться (Climb) #одиночное_действие
+		Плыть (Swim) #одиночное_действие
+		Открыть силой (Force Open) #одиночное_действие
+	- Действия с обучением
+		Разоружить (Disarm) #одиночное_действие 
+- **Ремесло (Crafting)**
+	Интеллект
+	- Действия без обучения
+		Ремонт (Repair) <sup>И</sup>
+		Вспомнить информацию (Recall Knowledge) <sup>Общ</sup> #одиночное_действие
+	- Действия с обучением
+		Создать (Craft) <sup>О, Общ</sup>
+		Идентификация алхимии (Identify Alchemy) <sup>О, Общ</sup>
+		Заработок денег (Earn Income) <sup>О, Общ</sup>
