--- a/4. Навыки/Навыки.md
+++ b/4. Навыки/Навыки.md
@@ -62,3 +62,34 @@
 		Создать (Craft) <sup>О, Общ</sup>
 		Идентификация алхимии (Identify Alchemy) <sup>О, Общ</sup>
 		Заработок денег (Earn Income) <sup>О, Общ</sup>
+- **Обман (Deception)**
+	Харизма
+	- Действия без обучения
+		Отвлечь внимание (Create a Diversion) #одиночное_действие
+		Перевоплотиться (Impersonate) <sup>И</sup>
+		Лгать (Lie)
+	- Действия с обучением
+		Финт (Feint) #одиночное_действие
+- **Дипломатия (Diplomacy)**
+	Харизма
+	- Действия без обучения
+			Собрать информацию (Gather Information) <sup>И</sup>
+			Произвести впечатление (Make an Impression) <sup>И</sup>
+			Просьба (Request) #одиночное_действие
+- **Запугивание (Intimidation)**
+	Харизма
+	- Действия без обучения
+		Принуждение (Coerce) <sup>И</sup>
+		Деморализовать (Demoralize) #одиночное_действие
+- **Знания (Lore)**
+	Интеллект
+	- Действия без обучения
+		Вспомнить информацию (Recall Knowledge) <sup>Общ</sup> #одиночное_действие
+	- Действия с обучением
+		Заработок денег (Earn Income) <sup>О, Общ</sup>
+- **Медицина (Medicine)**
+	Интеллект
+	- Действия без обучения
+		Вспомнить информацию (Recall Knowledge) <sup>Общ</sup> #одиночное_действие
+	- Действия с обучением
+		Заработок денег (Earn Income) <sup>О, Общ</sup>
